--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="css/admin.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -12,32 +13,32 @@
 
 <body>
 
-
+    <input type="checkbox" id="nav-toggle">
     <div class="sidebar">
         <div class="sidebar-brand">
-            <h2><span class="lab la-accusoft"> ElissaDesign</span></h2>
+            <h2><span class="fa fa-ellipsis-v"><span> ElissaDesign</span></span></h2>
         </div>
 
         <div class="sidebar-menu">
             <ul>
                 <li>
-                    <a href="" class="active"><span class="las la-igloo"></span>
+                    <a href="" class="active"><span class="fa fa-home"></span>
                     <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="lab la-users"></span>
+                    <a href=""><span class="fa fa-users"></span>
                     <span>Users</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="lab la-clipboard-list"></span>
+                    <a href=""><span class="fa fa-clipboard"></span>
                     <span>Articles</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="lab la-shopping-bag"></span>
+                    <a href=""><span class="fa fa-commenting-o"></span>
                     <span>Messages</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="lab la-receipt"></span>
+                    <a href=""><span class="fa fa-comments"></span>
                     <span>Comments</span></a>
                 </li>
             </ul>
@@ -48,14 +49,14 @@
     <div class="main-content">
         <header>
            <h2>
-               <label for="">
-                   <span class="las la-bars"></span>
+               <label for="nav-toggle">
+                   <span class="fa fa-bars"></span>
                </label>
                Dashboard
            </h2>
 
            <div class="search-wrapper">
-               <span class="las la-search"></span>
+               <span class="fa fa-search"></span>
                <input type="search" placeholder="Search here..">
            </div>
            
@@ -80,7 +81,7 @@
                         <span>users</span>
                     </div>
                     <div>
-                        <span class="las la-users"></span>
+                        <span class="fa fa-users"></span>
                     </div>
                 </div>
 
@@ -90,7 +91,7 @@
                         <span>Articles</span>
                     </div>
                     <div>
-                        <span class="las la-clipboard"></span>
+                        <span class="fa fa-clipboard"></span>
                     </div>
                 </div>
 
@@ -100,7 +101,7 @@
                         <span>Messages</span>
                     </div>
                     <div>
-                        <span class="las la-messages"></span>
+                        <span class="fa fa-commenting-o"></span>
                     </div>
                 </div>
                 <div class="card-single">
@@ -109,7 +110,7 @@
                         <span>Comments</span>
                     </div>
                     <div>
-                        <span class="las la-comments"></span>
+                        <span class="fa fa-comments"></span>
                     </div>
                 </div>
 
