--- a/Users.html
+++ b/Users.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="css/users.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
     <title>Admin | ElissaDesign</title>
@@ -22,11 +22,11 @@
         <div class="sidebar-menu">
             <ul>
                 <li>
-                    <a href="#" class="active"><span class="fa fa-home"></span>
+                    <a href="admin.html"><span class="fa fa-home"></span>
                     <span>Dashboard</span></a>
                 </li>
                 <li>
-                    <a href="Users.html"><span class="fa fa-users"></span>
+                    <a href="#" class="active"><span class="fa fa-users"></span>
                     <span>Users</span></a>
                 </li>
                 <li>
@@ -72,50 +72,34 @@
 
 
         <main>
-
-            <div class="cards">
-
-                <div class="card-single">
-                    <div>
-                        <h1>61</h1>
-                        <span>users</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-users"></span>
-                    </div>
-                </div>
-
-                <div class="card-single">
-                    <div>
-                        <h1>24</h1>
-                        <span>Articles</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-clipboard"></span>
-                    </div>
-                </div>
-
-                <div class="card-single">
-                    <div>
-                        <h1>14</h1>
-                        <span>Messages</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-commenting-o"></span>
-                    </div>
-                </div>
-                <div class="card-single">
-                    <div>
-                        <h1>32</h1>
-                        <span>Comments</span>
-                    </div>
-                    <div>
-                        <span class="fa fa-comments"></span>
-                    </div>
-                </div>
-
+            <div class="table-users">
+                <table width="100%"> 
+                    <thead>
+                        <tr>
+                            <td>Name</td>
+                            <td>Email</td>
+                            <td>Message</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Ih Elissa</td>
+                            <td>mbazwelisa@gmail.com</td>
+                            <td>Hi, how are you doing buddy?</td>
+                        </tr>
+                        <tr>
+                            <td>Ihimbazwe Elissa</td>
+                            <td>ihimbazwelisa@gmail.com</td>
+                            <td>Hi, how are you doing buddy?</td>
+                        </tr>
+                        <tr>
+                            <td>Ihimbazwe Elissa</td>
+                            <td>ihimbazwelisa@gmail.com</td>
+                            <td>Hi, how are you doing buddy?</td>
+                        </tr>
+                    </tbody>
+                 </table>
             </div>
-
 
             <div class="recent-grid">
                 <div class="messages">
