Added the SignUp page

--- a/AllBlogs.html
+++ b/AllBlogs.html
@@ -20,12 +20,16 @@
            </div>
            <div class="nav-container" id="navContainer">
                <i class="fa fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">SIGN IN</a></li>
-                    <li class="sign-up"><a href="#">SIGN UP</a></li>
-                </ul>
+                <div class="nav-list">
+                    <ul>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="admin.html">DASHBOARD</a></li>
+                        <li><a href="blogLandingPage.html">BLOG</a></li>
+                        <li><a href="#" class="signout">SIGN OUT</a></li>
+                       
+                    </ul>
+                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="" class="signedIn-user">
+                </div>
            </div>
            <i class="fa fa-bars" onclick="showMenu()" ></i>
        </nav>
@@ -55,7 +59,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
@@ -75,7 +79,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
@@ -94,7 +98,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
@@ -121,7 +125,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
@@ -140,7 +144,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
@@ -159,7 +163,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></i></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
@@ -186,7 +190,7 @@
                             <p>20</p>
                         </div>
                         <div class="icon-edit-delete">
-                            <p><i class="fa fa-pencil-square-o"></i></p>
+                            <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></i></p>
                             <p><i class="fa fa-trash"></i></p>
                         </div>
                     </div>
