--- a/blogLandingPage.html
+++ b/blogLandingPage.html
@@ -23,8 +23,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#">BLOG</a></li>
-                    <li><a href="#">SIGN IN</a></li>
-                    <li class="sign-up"><a href="#">SIGN UP</a></li>
+                    <li class="sign-up"><a href="SignUp.html">SIGN IN</a></li>
                 </ul>
            </div>
            <i class="fa fa-bars" onclick="showMenu()" ></i>
