--- a/messages.html
+++ b/messages.html
@@ -41,6 +41,10 @@
                     <a href="comments.html"><span class="fa fa-comments"></span>
                     <span>Comments</span></a>
                 </li>
+                <li>
+                    <a href="addBlog.html"><span class="fa fa-plus-circle"></span>
+                    <span>Add a Blog</span></a>
+                </li>
             </ul>
         </div>
     </div>
