Collecting the mistakes from feedback

--- a/AllBlogs.html
+++ b/AllBlogs.html
@@ -36,8 +36,9 @@
     </header>
 
 <section>
-    <div class="container">
+    <div class="container container-header">
         <h1>All Blogs</h1>
+        <button class="btn"><a href="addBlog.html"><span class="fa fa-plus-circle"></span>Add a blog</a></button>
     </div>
 </section>
 
@@ -60,7 +61,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
 
@@ -80,7 +81,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -99,7 +100,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -126,7 +127,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -145,7 +146,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -164,7 +165,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></i></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -191,7 +192,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><a href="addBlog.html"><i class="fa fa-pencil-square-o"></i></a></i></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -210,7 +211,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><i class="fa fa-pencil-square-o"></i></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
@@ -229,7 +230,7 @@
                         </div>
                         <div class="icon-edit-delete">
                             <p><i class="fa fa-pencil-square-o"></i></p>
-                            <p><i class="fa fa-trash"></i></p>
+                            <p><i class="fa fa-trash delete"></i></p>
                         </div>
                     </div>
                     <h3>UI/UX review presents</h3>
