--- a/Users.html
+++ b/Users.html
@@ -30,20 +30,16 @@
                     <span>Users</span></a>
                 </li>
                 <li>
-                    <a href="articles.html"><span class="fa fa-clipboard"></span>
-                    <span>Articles</span></a>
+                    <a href="articles.html"><span class="fa fa-check"></span>
+                    <span>Published</span></a>
                 </li>
                 <li>
                     <a href="messages.html"><span class="fa fa-commenting-o"></span>
                     <span>Messages</span></a>
                 </li>
                 <li>
-                    <a href="comments.html"><span class="fa fa-comments"></span>
-                    <span>Comments</span></a>
-                </li>
-                <li>
-                    <a href="addBlog.html"><span class="fa fa-plus-circle"></span>
-                    <span>Add a Blog</span></a>
+                    <a href="AllBlogs.html"><span class="fa fa-clipboard"></span>
+                    <span>Blogs</span></a>
                 </li>
             </ul>
         </div>
