--- a/addBlog.html
+++ b/addBlog.html
@@ -40,9 +40,12 @@
             <img src="images/addblog-img.png" width="70%" alt="">
         </div>
         <div class="add-section">
-            <span class="fa fa-plus-circle">
+            <div class="upload-file">
+                <span class="fa fa-plus-circle">
 
-            </span>
+                </span>
+                <p>Upload photo / video</p>
+            </div>
 
             <input type="text" placeholder="Title...">
         </div>
