--- a/admin.html
+++ b/admin.html
@@ -30,20 +30,16 @@
                     <span>Users</span></a>
                 </li>
                 <li>
-                    <a href="articles.html"><span class="fa fa-clipboard"></span>
-                    <span>Articles</span></a>
+                    <a href="articles.html"><span class="fa fa-check"></span>
+                    <span>Published</span></a>
                 </li>
                 <li>
                     <a href="messages.html"><span class="fa fa-commenting-o"></span>
                     <span>Messages</span></a>
                 </li>
                 <li>
-                    <a href="comments.html"><span class="fa fa-comments"></span>
-                    <span>Comments</span></a>
-                </li>
-                <li>
-                    <a href="addBlog.html"><span class="fa fa-plus-circle"></span>
-                    <span>Add a Blog</span></a>
+                    <a href="AllBlogs.html"><span class="fa fa-clipboard"></span>
+                    <span>Blogs</span></a>
                 </li>
             </ul>
         </div>
@@ -92,7 +88,7 @@
                 <div class="card-single">
                     <div>
                         <h1>24</h1>
-                        <span>Articles</span>
+                        <span>Blogs</span>
                     </div>
                     <div>
                         <span class="fa fa-clipboard"></span>
@@ -111,10 +107,10 @@
                 <div class="card-single">
                     <div>
                         <h1>32</h1>
-                        <span>Comments</span>
+                        <span>Total Reviews</span>
                     </div>
                     <div>
-                        <span class="fa fa-comments"></span>
+                        <span class="fa fa-eye"></span>
                     </div>
                 </div>
 
