--- a/articles.html
+++ b/articles.html
@@ -30,20 +30,16 @@
                     <span>Users</span></a>
                 </li>
                 <li>
-                    <a href="#" class="active"><span class="fa fa-clipboard"></span>
-                    <span>Articles</span></a>
+                    <a href="#" class="active"><span class="fa fa-check"></span>
+                    <span>Published</span></a>
                 </li>
                 <li>
                     <a href="messages.html"><span class="fa fa-commenting-o"></span>
                     <span>Messages</span></a>
                 </li>
                 <li>
-                    <a href="comments.html"><span class="fa fa-comments"></span>
-                    <span>Comments</span></a>
-                </li>
-                <li>
-                    <a href="addBlog.html"><span class="fa fa-plus-circle"></span>
-                    <span>Add a Blog</span></a>
+                    <a href="AllBlogs.html"><span class="fa fa-clipboard"></span>
+                    <span>Blogs</span></a>
                 </li>
             </ul>
         </div>
@@ -80,26 +76,26 @@
                 <table width="100%"> 
                     <thead>
                         <tr>
-                            <td>Name</td>
-                            <td>Email</td>
-                            <td>Message</td>
+                            <td>Title</td>
+                            <td>Release Date</td>
+                            <td>Comments</td>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Ih Elissa</td>
-                            <td>mbazwelisa@gmail.com</td>
-                            <td>Hi, how are you doing buddy?</td>
+                            <td>Changes in Software industry</td>
+                            <td>4 February 2020</td>
+                            <td>15 comments</td>
                         </tr>
                         <tr>
                             <td>Ihimbazwe Elissa</td>
-                            <td>ihimbazwelisa@gmail.com</td>
-                            <td>Hi, how are you doing buddy?</td>
+                            <td>4 February 2020</td>
+                            <td>15 comments</td>
                         </tr>
                         <tr>
                             <td>Ihimbazwe Elissa</td>
-                            <td>ihimbazwelisa@gmail.com</td>
-                            <td>Hi, how are you doing buddy?</td>
+                            <td>4 February 2020</td>
+                            <td>15 comments</td>
                         </tr>
                     </tbody>
                  </table>
