--- a/SignUp.html
+++ b/SignUp.html
@@ -16,12 +16,10 @@
         <div class="container">
             <p class="text-1">Have an account ? <span><a href="admin.html">Sign in</a></span></p>
             <div class="text-wrapper">
-                <h1>Welcome to Elissa Design</h1>
+                <h1>Welcome</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra, rhoncus 
                     ultrices ac, elit phasellus tincidunt pharetra. Mattis pharetra sit ipsum, sed integer. Pellentesque porta vitae aliquam.</p>
                 <div class="input-container">
-                    <label for="">Name:</label> <br>
-                    <input type="text" placeholder="Full name" required> <br> <br>
                     
                     <label for="">Email:</label> <br>
                     <input type="email" placeholder="abc@gmail.com" required> <br> <br>
@@ -31,11 +29,11 @@
 
                 </div>
                 <div class="account-creation">
-                    <p><span><a href="blogLandingPage.html">Create an account</a></span></p>
+                    <p><span><a href="index.html">Create an account</a></span></p>
                     <p>Or sign up with</p>
                     <div class="icon-signup">
                         <i class="fa fa-facebook-official"></i>
-                        <i class="fa fa-facebook-official"></i>
+                        <i class="fa fa-google"></i>
                     </div>
                 </div>
             </div>
