Validated the Forms and other files

--- a/SignUp.html
+++ b/SignUp.html
@@ -44,9 +44,17 @@
                 <small>Error message</small>
             </div>
 
-            <button>Submit</button>
+            <button class="btn-submit"><a href="admin.html">Sign in</a></button>
 
         </form>
+
+        <div class="footer">
+            <h2>Or sign in using </h2>
+            <div class="social-icons">
+                <i class="fa fa-google"></i>
+                <i class="fa fa-facebook"></i>
+            </div>
+        </div>
     </div>
 
 
