--- a/singlePageBlog.html
+++ b/singlePageBlog.html
@@ -53,7 +53,20 @@
                         Eros, felis suscipit massa mauris. Tincidunt convallis phasellus donec id lectus. <br> <br>  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Neque faucibus quis posuere vestibulum ac, posuere cursus. Arcu duis quam bibendum sit faucibus ac hendrerit. Diam,
                          dictum tortor quam turpis euismod nisl ultrices. Diam non massa, volutpat ac ac dictum amet, aliquam. Ullamcorper pulvinar integer maecenas neque, at odio non. Tellus ultrices nam id facilisi porta. Laoreet in orci, nunc scelerisque. Cras adipiscing adipiscing
                           facilisis quis feugiat. Facilisis lorem vestibulum sed congue imperdiet habitant maecenas. Eu at turpis egestas purus eleifend elit ut ac etiam. Orci justo ut feugiat aenean turpis. Lobortis vitae etiam scelerisque massa. Semper quisque ac, nulla ut. Platea fermentum justo egestas lacus, a.
-                        Eros, felis suscipit massa mauris. Tincidunt convallis phasellus donec id lectus.  </p>
+                        Eros, felis suscipit massa mauris. Tincidunt convallis phasellus donec id lectus.  
+                    </p>
+
+                    <div class="comments-section">
+                        <img src="images/about-blog-1.png" alt="" class="comment-profile">
+                        <div class="comment-text">
+                            <h3>Elissa Design</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum mattis viverra et magna convallis. Lorem sed cum augue orci egestas aenean. Tellus, pellentesque leo arcu donec molestie a nulla. Urna id.</p>
+                        </div>
+                    </div>
+
+                    <div class="comment-form">
+                        
+                    </div>
                    
                 </div>
                 <div class="aboutme">
