Integrating backend and frontend in progress

--- a/Users.html
+++ b/Users.html
@@ -30,10 +30,6 @@
                     <span>Users</span></a>
                 </li>
                 <li>
-                    <a href="articles.html"><span class="fa fa-check"></span>
-                    <span>Published</span></a>
-                </li>
-                <li>
                     <a href="messages.html"><span class="fa fa-commenting-o"></span>
                     <span>Messages</span></a>
                 </li>
@@ -78,119 +74,12 @@
                         <tr>
                             <td>Name</td>
                             <td>Email</td>
-                            <td>Message</td>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>Ih Elissa</td>
-                            <td>mbazwelisa@gmail.com</td>
-                            <td>Hi, how are you doing buddy?</td>
-                        </tr>
-                        <tr>
-                            <td>Ihimbazwe Elissa</td>
-                            <td>ihimbazwelisa@gmail.com</td>
-                            <td>Hi, how are you doing buddy?</td>
-                        </tr>
-                        <tr>
-                            <td>Ihimbazwe Elissa</td>
-                            <td>ihimbazwelisa@gmail.com</td>
-                            <td>Hi, how are you doing buddy?</td>
-                        </tr>
+                    <tbody id="user-data">
                     </tbody>
                  </table>
             </div>
-
-            <div class="recent-grid">
-                <div class="messages">
-                    <div class="card">
-                        <div class="card-header">
-                            <h2>Recent Mesages</h2>
-
-                            <button><a href="messages.html">See all</a> <span class="las la-arrow-right"></span></button>
-                        </div>
-                        <div class="card-body">
-                           <div class="table-responsive">
-                             <table width="100%"> 
-                                <thead>
-                                    <tr>
-                                        <td>Name</td>
-                                        <td>Email</td>
-                                        <td>Message</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Ih Elissa</td>
-                                        <td>mbazwelisa@gmail.com</td>
-                                        <td>Hi, how are you doing buddy?</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ihimbazwe Elissa</td>
-                                        <td>ihimbazwelisa@gmail.com</td>
-                                        <td>Hi, how are you doing buddy?</td>
-                                    </tr>
-                                    <tr>
-                                        <td>Ihimbazwe Elissa</td>
-                                        <td>ihimbazwelisa@gmail.com</td>
-                                        <td>Hi, how are you doing buddy?</td>
-                                    </tr>
-                                </tbody>
-                             </table>
-                           </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="users">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>New Users</h3>
-                            <button><a href="Users.html">See all</a> <span class="las la-arrow-right"></span></button>
-                        </div>
-                        <div class="card-body">
-                            <div class="users">
-                                <div class="info">
-                                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="">
-                                    <div>
-                                        <h4>Simon Karangwa</h4>
-                                        <small>Kigali-Rwanda</small>
-                                    </div>
-                                </div>
-                                <div class="contact">
-                                    <span class="las la-user-circle"></span>
-                                </div>
-                            </div>
-                            <div class="users">
-                                <div class="info">
-                                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="">
-                                    <div>
-                                        <h4>Simon Karangwa</h4>
-                                        <small>Kigali-Rwanda</small>
-                                    </div>
-                                </div>
-                                <div class="contact">
-                                    <span class="las la-user-circle"></span>
-                                </div>
-                            </div>
-                            <div class="users">
-                                <div class="info">
-                                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="">
-                                    <div>
-                                        <h4>Simon Karangwa</h4>
-                                        <small>Kigali-Rwanda</small>
-                                    </div>
-                                </div>
-                                <div class="contact">
-                                    <span class="las la-user-circle"></span>
-                                </div>
-                            </div>
-                           
-                        </div>
-                    </div>
-
-                </div>
             </div>
         </main>
     </div>
@@ -204,6 +93,7 @@
     })
     
     </script>
+    <script src="js/users.js"></script>
    
 </body>
 </html>
