--- a/addBlog.html
+++ b/addBlog.html
@@ -45,7 +45,7 @@
                     <span class="fa fa-plus-circle">
     
                     </span>
-                    <input type="file"  name="file" placeholder="pload photo / video" class="upload">
+                    <input type="file"  name="file" placeholder="pload photo / video" class="upload" id="uploadImage">
                     <!-- <p>Upload photo / video</p> --> 
                 </div>
     
@@ -55,7 +55,8 @@
              <p id="error-story"></p>
             <div class="story-text">
                 <textarea name="text" placeholder="Tell your story..." id="story"></textarea>
-                <button type="submit" class="btn">Publish</button>
+                <button type="submit" value="submit" class="btn">Publish</button>
+                <button type="submit" value="submit" class="btn" id="updateBtn">Update</button>
             </div>
         </form>
     </div>
