--- a/SignUp.html
+++ b/SignUp.html
@@ -16,6 +16,7 @@
 
         <div class="header">
             <h2>Create Account</h2>
+            <h3><a href="signin.html">/Sign in</a></h3>
         </div>
 
         <form class="form" id="form">
@@ -44,12 +45,12 @@
                 <small>Error message</small>
             </div>
 
-            <button class="btn-submit"><a href="admin.html">Sign in</a></button>
+            <button class="btn-submit" value="submit">Sign up</button>
 
         </form>
 
         <div class="footer">
-            <h2>Or sign in using </h2>
+            <h2>Or sign up using </h2>
             <div class="social-icons">
                 <i class="fa fa-google"></i>
                 <i class="fa fa-facebook"></i>
