--- a/admin.html
+++ b/admin.html
@@ -30,10 +30,6 @@
                     <span>Users</span></a>
                 </li>
                 <li>
-                    <a href="articles.html"><span class="fa fa-check"></span>
-                    <span>Published</span></a>
-                </li>
-                <li>
                     <a href="messages.html"><span class="fa fa-commenting-o"></span>
                     <span>Messages</span></a>
                 </li>
@@ -77,7 +73,7 @@
 
                 <div class="card-single">
                     <div>
-                        <h1>61</h1>
+                        <h1 id="users"></h1>
                         <span>users</span>
                     </div>
                     <div>
@@ -87,7 +83,7 @@
 
                 <div class="card-single">
                     <div>
-                        <h1>24</h1>
+                        <h1 id="posts"></h1>
                         <span>Blogs</span>
                     </div>
                     <div>
@@ -97,7 +93,7 @@
 
                 <div class="card-single">
                     <div>
-                        <h1>14</h1>
+                        <h1 id="messages"></h1>
                         <span>Messages</span>
                     </div>
                     <div>
@@ -131,12 +127,13 @@
                                 <thead>
                                     <tr>
                                         <td>Name</td>
+                                        <td>Option</td>
                                         <td>Email</td>
                                         <td>Message</td>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    <tr>
+                                <tbody id="message-data">
+                                    <!-- <tr>
                                         <td>Ih Elissa</td>
                                         <td>mbazwelisa@gmail.com</td>
                                         <td>Hi, how are you doing buddy?</td>
@@ -150,62 +147,13 @@
                                         <td>Ihimbazwe Elissa</td>
                                         <td>ihimbazwelisa@gmail.com</td>
                                         <td>Hi, how are you doing buddy?</td>
-                                    </tr>
+                                    </tr> -->
                                 </tbody>
                              </table>
                            </div>
                         </div>
 
                     </div>
-                </div>
-
-                <div class="users">
-                    <div class="card">
-                        <div class="card-header">
-                            <h3>New Users</h3>
-                            <button><a href="Users.html">See all</a> <span class="las la-arrow-right"></span></button>
-                        </div>
-                        <div class="card-body">
-                            <div class="users">
-                                <div class="info">
-                                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="">
-                                    <div>
-                                        <h4>Simon Karangwa</h4>
-                                        <small>Kigali-Rwanda</small>
-                                    </div>
-                                </div>
-                                <div class="contact">
-                                    <span class="las la-user-circle"></span>
-                                </div>
-                            </div>
-                            <div class="users">
-                                <div class="info">
-                                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="">
-                                    <div>
-                                        <h4>Simon Karangwa</h4>
-                                        <small>Kigali-Rwanda</small>
-                                    </div>
-                                </div>
-                                <div class="contact">
-                                    <span class="las la-user-circle"></span>
-                                </div>
-                            </div>
-                            <div class="users">
-                                <div class="info">
-                                    <img src="images/about-blog-1.png" width="40px" height="40px" alt="">
-                                    <div>
-                                        <h4>Simon Karangwa</h4>
-                                        <small>Kigali-Rwanda</small>
-                                    </div>
-                                </div>
-                                <div class="contact">
-                                    <span class="las la-user-circle"></span>
-                                </div>
-                            </div>
-                           
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </main>
@@ -220,6 +168,7 @@
     })
     
     </script>
+    <script src="js/admin.js"></script>
    
 </body>
 </html>
