Integration in progress

--- a/singlePageBlog.html
+++ b/singlePageBlog.html
@@ -72,7 +72,7 @@
                    
                 </div>
                 <div class="commentForm">
-                    <form action="">
+                    <form action="" id="form">
                         <label for="name">Your name</label> <br>
                         <input type="text" id="yourname" required> <br>
                         <label for="comment">Your comment</label> <br>
