Fixed sign in message

--- a/signin.html
+++ b/signin.html
@@ -34,6 +34,7 @@
                 <i class="fa fa-check-circle"></i>
                 <i class="fa fa-exclamation-circle"></i>
                 <small>Error message</small>
+                <p id="Error"></p>
             </div>
 
             <button class="btn-submit" value="submit">Sign in</button>
