Swipper Fixing index.html

--- a/index.html
+++ b/index.html
@@ -91,81 +91,78 @@
 <!-- ------------section-3 Portfolio-------------------------- -->
 
 
-    <section id="portfolio">
-        <div class="Portfolio-container">
-            <img src="images/Portfolio.svg.png" alt="Template image" class="portfolio-img">
-            <div class="portfolio-text">
-                <h1>Business Agance <span>2022</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
-                <br>
-                <p>Designed by <span>ElissaDesign</span>.</p>
-                <div class="btn-container">
-                    <button type="button" class="btn-porfolio-colored">Previw</button>
-                    <button type="button" class="btn-portfolio-colorless">Visit site</button>
+<!-- Slider main container -->
+<div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide" data-swiper-autoplay="3000" >
+          
+        <section>
+            <div class="Portfolio-container">
+                <img src="images/Music App.png" alt="Template image" class="portfolio-img">
+                <div class="portfolio-text">
+                    <h1>Music App <span>2022</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
+                    <br>
+                    <p>Designed by <span>ElissaDesign</span>.</p>
+                    <div class="btn-container">
+                        <button type="button" class="btn-porfolio-colored">Preview</button>
+                        <!-- <button type="button" class="btn-portfolio-colorless">Visit site</button> -->
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    
 
-<hr>
+    </div>
+      <div class="swiper-slide" data-swiper-autoplay="3000">
 
-
-
-    <section>
-        <div class="Portfolio-container">
-            <img src="images/Music App.png" alt="Template image" class="portfolio-img">
-            <div class="portfolio-text">
-                <h1>Music App <span>2022</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
-                <br>
-                <p>Designed by <span>ElissaDesign</span>.</p>
-                <div class="btn-container">
-                    <button type="button" class="btn-porfolio-colored">Preview</button>
-                    <button type="button" class="btn-portfolio-colorless">Visit site</button>
+        <section>
+            <div class="Portfolio-container">
+                <img src="images/Portfolio.svg.png" alt="Template image" class="portfolio-img">
+                <div class="portfolio-text">
+                    <h1>Tour Agance <span>2022</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
+                    <br>
+                    <p>Designed by <span>ElissaDesign</span>.</p>
+                    <div class="btn-container">
+                        <button type="button" class="btn-porfolio-colored">Preview</button>
+                        <!-- <button type="button" class="btn-portfolio-colorless">Visit site</button> -->
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
+      </div>
+      <div class="swiper-slide" data-swiper-autoplay="3000">
 
-<hr>
-
-
-
-    <section>
-        <div class="Portfolio-container">
-            <img src="images/Portfolio.svg.png" alt="Template image" class="portfolio-img">
-            <div class="portfolio-text">
-                <h1>Tour Agance <span>2022</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
-                <br>
-                <p>Designed by <span>ElissaDesign</span>.</p>
-                <div class="btn-container">
-                    <button type="button" class="btn-porfolio-colored">Preview</button>
-                    <button type="button" class="btn-portfolio-colorless">Visit site</button>
+        <section>
+            <div class="Portfolio-container">
+                <img src="images/Music App.png" alt="Template image" class="portfolio-img">
+                <div class="portfolio-text">
+                    <h1>Tour Agance <span>2022</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
+                    <br>
+                    <p>Designed by <span>ElissaDesign</span>.</p>
+                    <div class="btn-container">
+                        <button type="button" class="btn-porfolio-colored">Preview</button>
+                        <!-- <button type="button" class="btn-portfolio-colorless btn-colorless">Visit site</button> -->
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-<hr>
+
+      </div>
+      ...
+    </div>
   
+    <!-- If we need scrollbar -->
+    <div class="swiper-scrollbar"></div>
+</div>
 
-    <section>
-        <div class="Portfolio-container">
-            <img src="images/Music App.png" alt="Template image" class="portfolio-img">
-            <div class="portfolio-text">
-                <h1>Tour Agance <span>2022</span></h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non varius nec nunc malesuada et sed gravida  </p>
-                <br>
-                <p>Designed by <span>ElissaDesign</span>.</p>
-                <div class="btn-container">
-                    <button type="button" class="btn-porfolio-colored">Preview</button>
-                    <button type="button" class="btn-portfolio-colorless btn-colorless">Visit site</button>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
 
 
@@ -275,7 +272,7 @@
 
 
    
-
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
