--- a/signin.html
+++ b/signin.html
@@ -16,6 +16,7 @@
 
         <div class="header">
             <h2>Sign In</h2>
+            <h3><a href="SignUp.html">/Sign up</a></h3>
         </div>
 
         <form class="form" id="form">
