--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><a href="aboutme.html">ABOUT ME</a></li>
                     <li><a href="#pricing">PRICING</a></li>
                     <li><a href="blogLandingPage.html">BLOG</a></li>
-                    <li class="sign-up"><a href="SignUp.html">SIGN IN</a></li>
+                    <li class="sign-up"><a href="signin.html">SIGN IN</a></li>
                 </ul>
            </div>
            <i class="fa fa-bars" onclick="showMenu()" ></i>
